# orb

./: .gitignore  LICENSE  MVP.md  PIVOT.md  PROPOSAL.md  README.md  config.example.yaml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: chat.js
app/: analytics.html  db.js  index.html  journal.html  manifest.json  sw.js
app/icons/: generate.html
orb/: __init__.py  demo.py  main.py
orb/audio/: features.py  listener.py
orb/brain/: __init__.py  claude_brain.py
orb/emotion/: __init__.py  classifier.py
orb/hardware/: imu.py  leds.py  motors.py  speaker.py
orb/utils/: config.py  mood_history.py
simulator/: index.html
tests/: conftest.py  test_brain.py  test_classifier.py  test_motors.py
